--- a/Bitcoin/View/Base.lproj/Main.storyboard
+++ b/Bitcoin/View/Base.lproj/Main.storyboard
@@ -97,6 +97,11 @@
                             <constraint firstItem="ct2-jk-pgH" firstAttribute="bottom" secondItem="CjI-yV-vnC" secondAttribute="bottom" id="tCZ-GN-qxe"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bitcoinLabel" destination="N2a-Ax-iRV" id="xPo-T1-9r8"/>
+                        <outlet property="currencyLabel" destination="MAn-y0-nXv" id="oya-2Q-kR3"/>
+                        <outlet property="currencyPicker" destination="ct2-jk-pgH" id="hpU-DG-qww"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
